@@ -1,4 +1,5 @@
 
+	58. Create nodes with node factory in ChppVisRdmBuilder.
 	57. Distribute headers in subdirectories.
 	56. Install doxytag file in ${datadir}/doc/kwsPlus/html directory.
 	
